samplepolicy/allow-intra-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-namespace-01
  namespace: ind-ns1  # The namespace where your services reside (e.g., ind-ns1)
spec:
  selector:
    matchLabels: {}  # This allows all services within the namespace (ind-ns1)
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["ind-ns2"]  # Allow only traffic from the same namespace (ind-ns1)
